# bass-senpai

./: .gitignore  BUILD.md  CMakeLists.txt  CPP_MIGRATION.md  DEVELOPMENT.md  LICENSE  README.md  demo.py  final_verification.py  pyproject.toml
bass_senpai/: __init__.py  artwork.py  main.py  mpris.py  ui.py
include/: artwork_handler.hpp  bass_senpai.hpp  mpris_client.hpp  terminal_ui.hpp
src/: artwork_handler.cpp  bass_senpai.cpp  main.cpp  mpris_client.cpp  terminal_ui.cpp
tests/: test_bass_senpai.py
